exercise10-phonebook-application/alb-security-groups.tf
resource "aws_security_group" "alb-secgrp" {
  name        = "alb-secgrp"
  description = "Allow TLS inbound traffic"
  vpc_id = data.aws_vpc.default.id
  
  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-secgrp"
  }
}
